# libpgo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  REFACTOR_PLAN.md  conanfile.py  mkdocs.yml  pyproject.toml
src/api/: CMakeLists.txt  runSimCore.cpp  runSimCore.h
src/api/c/: CMakeLists.txt  pgo_c.cpp  pgo_c.h  pgo_c_def.h
src/api/python/pypgo/: CMakeLists.txt  pgo_dump_abc.py  pgo_run_sim.py  pgo_test_01.py  pypgo.cpp  pypgo.h  pypgo_main.cpp
src/core/: CMakeLists.txt
src/core/energy/: CMakeLists.txt
src/core/energy/constraintPotentialEnergies/: barycentricCoordinateSlidingSoftConstraints.cpp  barycentricCoordinateSlidingSoftConstraints.h  multiVertexConstrainedRigidMotion.cpp  multiVertexConstrainedRigidMotion.h  multiVertexPullingSoftConstraints.cpp  multiVertexPullingSoftConstraints.h  multiVertexPullingSoftConstraintsPOrder.cpp  multiVertexPullingSoftConstraintsPOrder.h  multiVertexSlidingSoftConstraints.cpp  multiVertexSlidingSoftConstraints.h  potentialEnergyAligningMeshConnectivity.cpp  potentialEnergyAligningMeshConnectivity.h
src/core/energy/genericPotentialEnergies/: laplacianProblem.cpp  laplacianProblem.h  linearPotentialEnergy.cpp  linearPotentialEnergy.h  quadraticPotentialEnergy.cpp  quadraticPotentialEnergy.h
src/core/energy/geometryPotentialEnergies/: centerOfMassMatchingEnergy.cpp  centerOfMassMatchingEnergy.h  smoothRSEnergy.cpp  smoothRSEnergy.h  surfaceSmoothnessAbsoluteMeanCurvature.cpp  surfaceSmoothnessAbsoluteMeanCurvature.h  surfaceTriangleDeformation.cpp  surfaceTriangleDeformation.h  triangleAffineToPositionEnergy.cpp  triangleAffineToPositionEnergy.h  vertexAffineToPositionEnergy.cpp  vertexAffineToPositionEnergy.h
src/core/energy/solidDeformationModel/: CMakeLists.txt  cubicMeshDeformationModel.cpp  cubicMeshDeformationModel.h  deformationModel.h  deformationModelAssembler.cpp  deformationModelAssembler.h  deformationModelEnergy.cpp  deformationModelEnergy.h  deformationModelFDTest.cpp  deformationModelFDTest.h  deformationModelManager.cpp  deformationModelManager.h  elasticModel.h  elasticModel1DCubicSpline.cpp  elasticModel1DCubicSpline.h  elasticModel1DQuadratic.cpp  elasticModel1DQuadratic.h  elasticModel2DFundamentalForms.h  elasticModel2DFundamentalFormsFabric.cpp  elasticModel2DFundamentalFormsFabric.h  elasticModel2DFundamentalFormsSTVK.cpp  elasticModel2DFundamentalFormsSTVK.h  elasticModel3DDeformationGradient.h  elasticModel3DMooneyRivlin.cpp  elasticModel3DMooneyRivlin.h  elasticModel3DSTVKMaterial.cpp  elasticModel3DSTVKMaterial.h  elasticModelCombinedMaterial.h  elasticModelHillTypeMaterial.cpp  elasticModelHillTypeMaterial.h  elasticModelInvariantBasedMaterial.cpp  elasticModelInvariantBasedMaterial.h  elasticModelLinearMaterial.cpp  elasticModelLinearMaterial.h  elasticModelStableNeoHookeanMaterial.cpp  elasticModelStableNeoHookeanMaterial.h  elasticModelVolumeMaterial.cpp  elasticModelVolumeMaterial.h  generateTetMeshMatrix.cpp  generateTetMeshMatrix.h  (+36 more)
src/core/scene/: CMakeLists.txt
src/core/scene/interpolationCoordinates/: GreenCoordinates.cpp  GreenCoordinates.h  barycentricCoordinates.cpp  barycentricCoordinates.h  interpolationCoordinatesBase.h  meanValueCoordinates.cpp  meanValueCoordinates.h
src/core/scene/mesh/: boundingBox.cpp  boundingBox.h  boundingVolumeTree.cpp  boundingVolumeTree.h  boundingVolumeTreeBase.cpp  boundingVolumeTreeBase.h  createTriMesh.cpp  createTriMesh.h  edgeKey.h  geometryQuery.cpp  geometryQuery.h  halfSpace.h  initPredicates.h  intersection_tunicate.cpp  labelOuterTets.cpp  labelOuterTets.h  lineSegmentDistance.cpp  meshIntersection.cpp  meshIntersection.h  meshLinearAlgebra.h  plane.h  pointInsideOutsideQuery.cpp  pointInsideOutsideQuery.h  predicates.cpp  predicates.h  rectKey.cpp  rectKey.h  simpleSphere.cpp  simpleSphere.h  tetKey.cpp  tetKey.h  tetMeshGeo.cpp  tetMeshGeo.h  tetMeshManifold.cpp  tetMeshManifold.h  tetrahedron.cpp  tetrahedron.h  triKey.cpp  triKey.h  triMeshGeo.cpp  (+22 more)
src/core/scene/volumetricMesh/: BREAKING_API_BOUNDARY.md  CMakeLists.txt  INVARIANTS.md  REFACTOR_PLAN.md  REFACTOR_PLAN_PHASE_A.md  REFACTOR_PLAN_PHASE_B.md  REFACTOR_PLAN_PHASE_C.md  REFACTOR_PLAN_PHASE_D.md  REFACTOR_PLAN_PHASE_F.md  cubicMesh.cpp  cubicMesh.h  generateMassMatrix.cpp  generateMassMatrix.h  generateSurfaceMesh.cpp  generateSurfaceMesh.h  loadMshFile.cpp  loadMshFile.h  tetMesh.cpp  tetMesh.h  volumetricMesh.cpp  volumetricMesh.h  volumetricMeshENuMaterial.cpp  volumetricMeshENuMaterial.h  volumetricMeshEdit.cpp  volumetricMeshEdit.h  volumetricMeshExport.cpp  volumetricMeshExport.h  volumetricMeshIO.cpp  volumetricMeshIO.h  volumetricMeshInterpolation.cpp  volumetricMeshInterpolation.h  volumetricMeshMooneyRivlinMaterial.cpp  volumetricMeshMooneyRivlinMaterial.h  volumetricMeshOrthotropicMaterial.cpp  volumetricMeshOrthotropicMaterial.h  volumetricMeshParser.cpp  volumetricMeshParser.h  volumetricMeshTypes.h
src/core/solve/: CMakeLists.txt
src/core/solve/contact/: CCDKernel.cpp  CCDKernel.h  CMakeLists.txt  contactEnergyUtilities.cpp  contactEnergyUtilities.h  pointPenetrationBarrierEnergy.cpp  pointPenetrationBarrierEnergy.h  pointPenetrationEnergy.cpp  pointPenetrationEnergy.h  pointTrianglePairBarrierEnergy.cpp  pointTrianglePairBarrierEnergy.h  pointTrianglePairCouplingEnergyWithCollision.cpp  pointTrianglePairCouplingEnergyWithCollision.h  (+6 more)
src/core/utils/: CMakeLists.txt
tests/api/: CMakeLists.txt  runSimConfig_parse_test.cpp
tests/api/c/: CMakeLists.txt  pgo_c_test.cpp
tests/api/python/: test_basic.py
tests/core/energy/: CMakeLists.txt  cubicMeshDeformationModel_test.cpp  newtonRaphsonSolver_test.cpp  pointPenetrationBarrierEnergy_test.cpp  pointTrianglePairBarrierEnergy_test.cpp  scene_to_simulation_mesh_test.cpp  simulationMesh_material_binding_test.cpp
tests/core/scene/: CMakeLists.txt  contact_embedding_test.cpp  core_scene_test.cpp  self_contact_detection_test.cpp  self_contact_handler_test.cpp
tests/core/utils/: CMakeLists.txt  fileService_test.cpp
tests/tools/: CMakeLists.txt  cubicMesher_test.cpp  runSim_test.cpp
(+556 files in other folders)
